@@ -217,8 +217,8 @@ begin
   atm.AddItem('PUT',msg,false);
   atm.AddItem('RELEASE',TMessage.Init(MSG_RELEASECEL,0));
   atm.AddItem('ROTATE',msg,false);
-  atm.AddItem('FLIP V',msg,false);
-  atm.AddItem('FLIP H',msg,false);
+  atm.AddItem('FLIP V',TMessage.Init(MSG_FLIPCEL,0));
+  atm.AddItem('FLIP H',TMessage.Init(MSG_FLIPCEL,1));
   atm.AddItem('MAGNIFY 2X',msg,false);
   atm.AddItem('MAGNIFY 3X',msg,false);
   atm.AddItem('LOAD',TMessage.Init(MSG_LOADCEL,0));
